# bovo

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ExtraDesktop.sh  HISTORY  INSTALL  Messages.sh  README.PACKAGERS  TODO  bovo.appdata.xml  bovo.desktop  bovo.qrc  org.kde.bovo.appdata.xml  org.kde.bovo.desktop  snapcraft.yaml
ai/: CMakeLists.txt  ai.cc  ai.h  aiboard.cc  aiboard.h  aifactory.cc  aifactory.h  aisquare.cc  aisquare.h
ai/aron/: aiaron.cc  aiaron.h  aiboard.cc  aiboard.h  aisquare.h
ai/gabor/: ai_impl.cpp  ai_impl.h  ai_interface.cpp  ai_interface.h  aigabor.cc  aigabor.h  node.cpp  node.h  standing.cpp  standing.h
doc/: CMakeLists.txt  index.docbook
game/: CMakeLists.txt  board.cc  board.h  common.h  coord.cc  coord.h  dim.cc  dim.h  dimension.cc  dimension.h  game.cc  game.h  gamegame.cc  gamegame.h  move.cc  move.h  square.cc  square.h
game/test/: CMakeLists.txt  test.cpp
gui/: CMakeLists.txt  bovo.kcfg  bovoui.rc  bovowidget.cc  commondefs.h  game.cc  game.h  hintitem.cc  hintitem.h  main.cc  mainwindow.cc  mainwindow.h  mark.cc  mark.h  move.cc  move.h  scene.cc  scene.h  settings.kcfgc  theme.cc  theme.h  version.h  view.cc  view.h  winitem.cc  winitem.h
icons/: CMakeLists.txt  hisc-app-bovo.svgz
po/ar/: bovo.po
po/ar/docs/bovo/: index.docbook
po/ast/: bovo.po
po/be/: bovo.po
po/bg/: bovo.po
po/bs/: bovo.po
po/ca/: bovo.po
po/ca/docs/bovo/: index.docbook
po/ca@valencia/: bovo.po
po/cs/: bovo.po
po/cs/docs/bovo/: index.docbook
po/csb/: bovo.po
po/da/: bovo.po
po/de/: bovo.po
po/de/docs/bovo/: index.docbook
po/el/: bovo.po
po/en_GB/: bovo.po
po/eo/: bovo.po
po/es/: bovo.po
po/es/docs/bovo/: index.docbook
po/et/: bovo.po
po/et/docs/bovo/: index.docbook
po/eu/: bovo.po
po/fi/: bovo.po
po/fr/: bovo.po
po/fr/docs/bovo/: index.docbook
po/ga/: bovo.po
po/gl/: bovo.po
po/he/: bovo.po
po/hi/: bovo.po
po/hne/: bovo.po
po/hr/: bovo.po
po/hu/: bovo.po
po/ia/: bovo.po
po/id/: bovo.po
po/is/: bovo.po
po/it/: bovo.po
po/it/docs/bovo/: index.docbook
po/ja/: bovo.po
po/ka/: bovo.po
po/kk/: bovo.po
po/km/: bovo.po
po/ko/: bovo.po
po/lt/: bovo.po
po/lv/: bovo.po
po/mai/: bovo.po
po/ml/: bovo.po
po/mr/: bovo.po
po/nb/: bovo.po
po/nds/: bovo.po
po/nl/: bovo.po
po/nl/docs/bovo/: index.docbook
po/nn/: bovo.po
po/oc/: bovo.po
po/pa/: bovo.po
po/pl/: bovo.po
po/pt/: bovo.po
po/pt/docs/bovo/: index.docbook
po/pt_BR/: bovo.po
po/pt_BR/docs/bovo/: index.docbook
po/ro/: bovo.po
po/ru/: bovo.po
po/ru/docs/bovo/: index.docbook
po/sa/: bovo.po
po/se/: bovo.po
po/sk/: bovo.po
po/sl/: bovo.po
po/sl/docs/bovo/: index.docbook
po/sq/: bovo.po
po/sr/: bovo.po
po/sr@ijekavian/: bovo.po
po/sr@ijekavianlatin/: bovo.po
po/sr@latin/: bovo.po
po/sv/: bovo.po
po/sv/docs/bovo/: index.docbook
po/tr/: bovo.po
po/ug/: bovo.po
po/uk/: bovo.po
po/uk/docs/bovo/: index.docbook
po/zh_CN/: bovo.po
po/zh_TW/: bovo.po
src/: CMakeLists.txt  org.kde.bovo.appdata.xml  org.kde.bovo.desktop
src/ai/: ai.cc  aifactory.h
src/ai/aron/: aiaron.cc  aiaron.h  aisquare.h
src/ai/gabor/: ai_impl.cpp  ai_impl.h  ai_interface.h  aigabor.h  node.cpp  standing.cpp  standing.h
src/game/: board.cc  common.h  coord.h  game.cc  game.h  move.cc  square.h
src/gui/: bovo.kcfg  bovoui.rc  hintitem.cc  main.cc  mainwindow.cc  mainwindow.h  mark.h  scene.h  theme.cc  view.h
themes/: CMakeLists.txt
themes/gomoku/: CMakeLists.txt  themerc
themes/gomoku/pics/: CMakeLists.txt
themes/highcontrast/: CMakeLists.txt  themerc
themes/highcontrast/pics/: CMakeLists.txt
themes/scribble/: CMakeLists.txt  themerc
themes/scribble/pics/: CMakeLists.txt
themes/spacy/: CMakeLists.txt  themerc
themes/spacy/pics/: CMakeLists.txt
